part1/exercise10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-log-svc
spec:
  type: ClusterIP
  selector:
    app: timestamp-log
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 9901
