part1/exercise10/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timestamp-log-ingress
spec:
  rules:
    - http:
        paths:
          - path: /log # localhost:8081/log
            pathType: Prefix
            backend:
              service:
                name: timestamp-log-svc
                port:
                  number: 2345
